--- a/weitaixin/src/main/res/layout/activity_pay_account.xml
+++ b/weitaixin/src/main/res/layout/activity_pay_account.xml
@@ -12,7 +12,7 @@
     <LinearLayout
         android:id="@+id/ll1Function"
         android:layout_width="match_parent"
-        android:layout_height="190dp"
+        android:layout_height="180dp"
         android:layout_below="@id/head_title_id"
         android:layout_marginTop="4dp"
         android:background="@color/white0"
@@ -32,6 +32,7 @@
                 android:src="@drawable/pay_account_rent" />
 
             <TextView
+                android:id="@+id/tvPayAccountRentDay"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
