--- a/weitaixin/src/main/res/layout/activity_main_welcome.xml
+++ b/weitaixin/src/main/res/layout/activity_main_welcome.xml
@@ -4,11 +4,23 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_enter"
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="欢迎页开发中。。。" />
+        android:layout_height="match_parent">
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewPagerWelcome"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <ImageView
+            android:id="@+id/ivWelcomeStart"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"
+            android:src="@drawable/welcome"
+            android:visibility="visible" />
+    </FrameLayout>
 
 </LinearLayout>
