--- a/weitaixin/src/main/res/drawable/corner_background_green3.xml
+++ b/weitaixin/src/main/res/drawable/corner_background_green3.xml
@@ -3,15 +3,14 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/green5" />
+        android:color="@color/green4" />
 
-    <solid android:color="@color/green5" />
+    <solid android:color="@color/green4" />
 
     <corners
-        android:topLeftRadius="20dp"
-        android:topRightRadius="20dp"
         android:bottomLeftRadius="0dp"
         android:bottomRightRadius="0dp"
-        />
+        android:topLeftRadius="20dp"
+        android:topRightRadius="20dp" />
 
 </shape>
