--- a/weitaixin/src/main/res/layout/fragment_home_page.xml
+++ b/weitaixin/src/main/res/layout/fragment_home_page.xml
@@ -44,7 +44,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="10dp"
-                android:text="278"
+                android:text=""
                 android:textColor="@color/white0" />
         </RelativeLayout>
 
@@ -74,7 +74,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="10dp"
-                android:text="278"
+                android:text=""
                 android:textColor="@color/white0" />
         </RelativeLayout>
 
@@ -107,12 +107,13 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="10dp"
-                android:text="35"
+                android:text=""
                 android:textColor="@color/white0" />
         </RelativeLayout>
 
 
         <TextView
+            android:id="@+id/tvGestationalWeeks"
             android:layout_width="42dp"
             android:layout_height="42dp"
             android:layout_centerVertical="true"
@@ -120,7 +121,7 @@
             android:layout_toLeftOf="@+id/ivHomeHeadImg"
             android:background="@drawable/home_head_age"
             android:gravity="center"
-            android:text="31"
+            android:text=""
             android:textColor="@color/white0"
             android:textSize="@dimen/font14" />
 
@@ -141,7 +142,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="6dp"
             android:gravity="center"
-            android:text="张晓非"
+            android:text=""
             android:textColor="@color/white0"
             android:textSize="@dimen/font18" />
 
