--- a/weitaixin/src/main/res/values/colors.xml
+++ b/weitaixin/src/main/res/values/colors.xml
@@ -55,6 +55,7 @@
     <color name="green4">#FFE9fffA</color>
     <color name="green5">#FF63E1DF</color>
     <color name="green6">#FF3DD0AC</color>
+    <color name="green7">#FF6CD7F4</color>
     <!--background-->
     <color name="background_white">@color/white0</color>
     <color name="background_gray">@color/gray6</color>
