--- a/weitaixin/src/main/res/layout/viewpager_item_last.xml
+++ b/weitaixin/src/main/res/layout/viewpager_item_last.xml
@@ -15,8 +15,14 @@
         android:layout_width="wrap_content"
         android:text="立即开启"
         android:textColor="@color/white0"
+        android:paddingLeft="40dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingRight="40dp"
         android:layout_marginBottom="60dp"
+        android:background="@drawable/corner_welcome"
         android:textSize="@dimen/font30"
         android:layout_gravity="bottom|center_horizontal"
         android:layout_height="wrap_content" />
+
 </FrameLayout>
