我的消息点击进入订单

--- a/weitaixin/src/main/res/layout/fragment_home_page.xml
+++ b/weitaixin/src/main/res/layout/fragment_home_page.xml
@@ -128,7 +128,7 @@
             android:textColor="@color/white0"
             android:textSize="@dimen/font12" />
 
-        <cn.ihealthbaby.weitaixin.ui.widget.RoundImageView
+        <ImageView
             android:id="@+id/ivHomeHeadImg"
             android:layout_width="100dp"
             android:layout_height="100dp"
