--- a/weitaixin/src/main/res/layout/activity_pay_account.xml
+++ b/weitaixin/src/main/res/layout/activity_pay_account.xml
@@ -38,7 +38,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
                 android:textSize="@dimen/font16"
-                android:text="租用设备" />
+                android:text="" />
         </LinearLayout>
 
         <LinearLayout
