--- a/weitaixinpro/src/main/res/layout/item_monitor.xml
+++ b/weitaixinpro/src/main/res/layout/item_monitor.xml
@@ -70,7 +70,7 @@
                     android:src="@drawable/record_clock"/>
 
                 <TextView
-                    android:id="@+id/tv_date"
+                    android:id="@+id/tv_gestational_weeks"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="32周+5天"
