--- a/weitaixinpro/src/main/res/layout/monitor_fragment.xml
+++ b/weitaixinpro/src/main/res/layout/monitor_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:baby="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@color/gray17"
@@ -18,7 +17,7 @@
             android:orientation="horizontal">
 
             <RelativeLayout
-                android:id="@+id/rl_no_monitor"
+                android:id="@+id/rl_unmonitor"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
@@ -31,7 +30,7 @@
                     android:text="@string/no_monitor"/>
 
                 <ImageView
-                    android:id="@+id/iv_no_monitor"
+                    android:id="@+id/iv_unmonitor"
                     android:layout_width="70dp"
                     android:layout_height="3dp"
                     android:layout_alignParentBottom="true"
@@ -41,7 +40,7 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:id="@+id/rl_already_monitor"
+                android:id="@+id/rl_monitoring"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
@@ -54,7 +53,7 @@
                     android:text="@string/monitor_during"/>
 
                 <ImageView
-                    android:id="@+id/iv_alreay_monitor"
+                    android:id="@+id/iv_monitoring"
                     android:layout_width="70dp"
                     android:layout_height="3dp"
                     android:layout_alignParentBottom="true"
@@ -92,7 +91,7 @@
     </LinearLayout>
 
     <FrameLayout
-        android:id="@+id/act_container"
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </FrameLayout>
