--- a/weitaixin/src/main/res/layout/activity_pay_affirm_payment.xml
+++ b/weitaixin/src/main/res/layout/activity_pay_affirm_payment.xml
@@ -2,8 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray5"
-    tools:context="cn.ihealthbaby.weitaixin.ui.pay.PayAccountActivity">
+    android:background="@color/gray5">
 
     <include
         android:id="@+id/head_title_id"
@@ -52,20 +51,20 @@
         <RelativeLayout
             android:id="@+id/rl2Function"
             android:layout_width="wrap_content"
-            android:paddingBottom="40dp"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:background="@color/white0">
+            android:background="@color/white0"
+            android:paddingBottom="40dp">
 
             <LinearLayout
                 android:id="@+id/llPaymenyWeixin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
                 android:layout_marginTop="26dp"
                 android:gravity="center"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp">
 
                 <ImageView
                     android:layout_width="60dp"
@@ -89,11 +88,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="26dp"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
                 android:layout_toRightOf="@id/llPaymenyWeixin"
                 android:gravity="center"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp">
 
                 <ImageView
                     android:layout_width="60dp"
@@ -117,14 +116,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/rl2Function"
-            android:visibility="gone"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp"
             android:layout_centerHorizontal="true"
-            android:paddingBottom="34dp"
             android:layout_marginTop="24dp"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="34dp"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
+            android:visibility="gone">
 
             <ImageView
                 android:layout_width="60dp"
