--- a/weitaixinpro/src/main/res/layout/item_record.xml
+++ b/weitaixinpro/src/main/res/layout/item_record.xml
@@ -1,5 +1,4 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@color/gray17"
@@ -7,9 +6,9 @@
 
 
     <FrameLayout
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="74dp">
+        android:layout_height="74dp"
+        android:layout_marginTop="10dp">
 
         <TextView
             android:id="@+id/tv_delete_item"
@@ -60,12 +59,7 @@
                         android:textColor="@color/gray3"
                         android:textSize="@dimen/font10"/>
 
-                    <TextView
-                        android:id="@+id/tvCircleTime2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/black1"
-                        android:textSize="@dimen/font18"/>
+
                 </LinearLayout>
 
 
@@ -80,7 +74,7 @@
 
 
                 <TextView
-                    android:id="@+id/tvTestTimeLong"
+                    android:id="@+id/tv_duration"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="6dp"
@@ -94,7 +88,7 @@
 
 
                 <TextView
-                    android:id="@+id/tvDateTime"
+                    android:id="@+id/tv_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignBottom="@id/ll_Layout"
@@ -116,7 +110,7 @@
                     android:src="@drawable/shape_green_circle"/>
 
                 <TextView
-                    android:id="@+id/tvAdviceStatus"
+                    android:id="@+id/tv_upload_status"
                     android:layout_width="80dp"
                     android:layout_height="36dp"
                     android:layout_alignParentRight="true"
