--- a/weitaixinpro/src/main/res/layout/item_record.xml
+++ b/weitaixinpro/src/main/res/layout/item_record.xml
@@ -53,11 +53,12 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/tvCircleTime1"
+                        android:id="@+id/tv_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/gray3"
-                        android:textSize="@dimen/font10"/>
+                        android:textSize="@dimen/font10"
+                        android:text="姓名"/>
 
 
                 </LinearLayout>
