--- a/weitaixinpro/src/main/res/layout/activity_monitor_play.xml
+++ b/weitaixinpro/src/main/res/layout/activity_monitor_play.xml
@@ -14,19 +14,19 @@
         android:layout_height="match_parent"
         android:layout_below="@id/title">
 
-        <cn.ihealthbaby.weitaixin.ui.widget.CurveHorizontalScrollView
+        <cn.ihealthbaby.weitaixinpro.ui.widget.CurveHorizontalScrollView
             android:id="@+id/chs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scrollbars="none">
 
-            <cn.ihealthbaby.weitaixin.ui.widget.CurveMonitorDetialView
+            <cn.ihealthbaby.weitaixinpro.ui.widget.CurveMonitorDetialView
                 android:id="@+id/curve_play"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
                 />
-        </cn.ihealthbaby.weitaixin.ui.widget.CurveHorizontalScrollView>
+        </cn.ihealthbaby.weitaixinpro.ui.widget.CurveHorizontalScrollView>
 
         <RelativeLayout
             android:layout_width="wrap_content"
