--- a/weitaixin/src/main/res/layout/activity_main_welcome.xml
+++ b/weitaixin/src/main/res/layout/activity_main_welcome.xml
@@ -9,10 +9,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/viewPagerWelcome"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent">
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/viewPagerWelcome"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <LinearLayout
+                android:id="@+id/llDot"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_gravity="bottom"
+                android:layout_marginBottom="20dp"
+                android:gravity="center" />
+
+
+        </FrameLayout>
+
 
         <ImageView
             android:id="@+id/ivWelcomeStart"
@@ -20,7 +36,7 @@
             android:layout_height="match_parent"
             android:scaleType="fitXY"
             android:src="@drawable/welcome"
-            android:visibility="visible" />
+            android:visibility="gone" />
     </FrameLayout>
 
 </LinearLayout>
